# br-eli-mcp

./: CONSTITUTION.md  DISCOVERY.md  README.md  SOURCES.md  pyproject.toml  server.json
.github/workflows/: release.yml
runtime/: br-runtime.json
src/br_eli_mcp/: __init__.py  __main__.py  audit.py  cache.py  carf_client.py  caselaw_client.py  citations.py  client.py  models.py  norma_client.py  norma_text.py  runtime.py  server.py  stj_client.py  tcu_client.py  text_client.py  tst_client.py
tests/: test_carf_parse_offline.py  test_carf_smoke.py  test_caselaw_smoke.py  test_norma_smoke.py  test_smoke.py  test_stj_parse_offline.py  test_stj_smoke.py  test_tcu_parse_offline.py  test_tcu_smoke.py  test_text_smoke.py  test_tst_parse_offline.py  test_tst_smoke.py
tests/fixtures/: carf_acordao_sample.json  stj_espelho_sample.json  tcu_documento_sample.json  tcu_resumidos_sample.json  tst_acordao_sample.json  tst_pesquisa_exact_sample.json
