[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "br-eli-mcp"
version = "0.5.0"
description = "MCP server for Camara dos Deputados (bills), legis.senado.leg.br (Normas Juridicas by URN Lex), normas.leg.br (real article text), DataJud CNJ (court docket metadata), STJ Open Data (real ruling text) and CARF (real tax-ruling text) - Brazilian federal legislation and case law with verifiable citations."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "Matematic Solutions", email = "kontakt@matematic.co" },
    { name = "Wieslaw Mazur", email = "mazur.wieslaw2022@gmail.com" },
]
keywords = ["mcp", "legaltech", "brazil", "camara-dos-deputados", "law"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]
dependencies = [
    "fastmcp>=0.2.0",
    "httpx>=0.27",
    "diskcache>=5.6",
    "anyio>=4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.urls]
Repository = "https://github.com/matematicsolutions/br-eli-mcp"
Issues = "https://github.com/matematicsolutions/br-eli-mcp/issues"
Homepage = "https://matematic.co"

[project.scripts]
br-eli-mcp = "br_eli_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/br_eli_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/br_eli_mcp/server.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
